Bug 265354 - plasma-desktop crashes on startup in KDE-4.6
Summary: plasma-desktop crashes on startup in KDE-4.6
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-02-04 01:12 UTC by boris64
Modified: 2011-02-04 18:13 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description boris64 2011-02-04 01:12:20 UTC
Application: plasma-desktop (0.4)
KDE Platform Version: 4.6.00 (4.6.0)
Qt Version: 4.7.1
Operating System: Linux 2.6.37-v2k11+ x86_64
Distribution (Platform): Gentoo Packages

-- Information about the crash:
- What I was doing when the application crashed:
Well, i simply started KDE and after some seconds 
(while my old session is being restored) plasma-desktop crashes.

The crash can be reproduced every time.

-- Backtrace:
Application: Plasma-Desktop-Umgebung (plasma-desktop), signal: Aborted
[Current thread is 1 (Thread 0x7f69e93ff780 (LWP 2078))]

Thread 3 (Thread 0x7f69dcdd6700 (LWP 2797)):
#0  0x0000003a6a4c8cc3 in poll () from /lib/libc.so.6
#1  0x0000003558c41f64 in g_main_context_iterate.clone.5 () from /usr/lib/libglib-2.0.so.0
#2  0x0000003558c4249d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x0000003559585396 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x0000003559559862 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x0000003559559aa4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x000000355946fed4 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x000000355953b628 in QInotifyFileSystemWatcherEngine::run() () from /usr/lib64/qt4/libQtCore.so.4
#8  0x000000355947269e in QThreadPrivate::start(void*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x0000003a6b006d4c in start_thread () from /lib/libpthread.so.0
#10 0x0000003a6a4d1a9d in clone () from /lib/libc.so.6

Thread 2 (Thread 0x7f69dd5d7700 (LWP 2903)):
#0  0x0000003a6b00b62c in pthread_cond_wait () from /lib/libpthread.so.0
#1  0x0000003561f91184 in QTWTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib64/qt4/libQtScript.so.4
#2  0x0000003561f911b9 in QTWTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/qt4/libQtScript.so.4
#3  0x0000003a6b006d4c in start_thread () from /lib/libpthread.so.0
#4  0x0000003a6a4d1a9d in clone () from /lib/libc.so.6

Thread 1 (Thread 0x7f69e93ff780 (LWP 2078)):
[KCrash Handler]
#6  0x0000003a6a432735 in raise () from /lib/libc.so.6
#7  0x0000003a6a433bb6 in abort () from /lib/libc.so.6
#8  0x000000355946a664 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x000000355946a7fd in qt_message(QtMsgType, char const*, __va_list_tag*) () from /usr/lib64/qt4/libQtCore.so.4
#10 0x000000355946a995 in qFatal(char const*, ...) () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007f69dc3ae053 in CalendarSupport::Calendar::Private::updateItem (this=0x7f69cc03cf30, item=..., mode=CalendarSupport::Calendar::Private::AssertExists) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/generic/dataengines/calendar/akonadi/calendar.cpp:193
#12 0x00007f69dc3af641 in CalendarSupport::Calendar::Private::dataChanged (this=0x7f69cc03cf30, topLeft=..., bottomRight=<value optimized out>) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/generic/dataengines/calendar/akonadi/calendar.cpp:157
#13 0x00007f69dc399984 in CalendarSupport::Calendar::Private::qt_metacall (this=0x7f69cc03cf30, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffa68d29b0) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0_build/plasma/generic/dataengines/calendar/moc_calendar_p.cpp:155
#14 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00000035595b5e57 in QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007f69d1412ca0 in Akonadi::EntityTreeModelPrivate::dataChanged (this=<value optimized out>, top=..., bottom=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/entitytreemodel_p.cpp:1402
#17 0x00007f69d1417635 in Akonadi::EntityTreeModelPrivate::monitoredItemChanged (this=0x7f69cc04f970, item=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/entitytreemodel_p.cpp:940
#18 0x00007f69d140c1be in Akonadi::EntityTreeModel::qt_metacall (this=0x7f69cc04ac60, _c=QMetaObject::InvokeMetaMethod, _id=24, _a=0x7fffa68d2cb0) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/entitytreemodel.moc:156
#19 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f69d1454b27 in Akonadi::Monitor::itemChanged (this=<value optimized out>, _t1=<value optimized out>, _t2=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/monitor.moc:169
#21 0x00007f69d14589a2 in Akonadi::MonitorPrivate::emitItemNotification (this=0x7f69cc056010, msg=..., item=..., collection=<value optimized out>, collectionDest=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:432
#22 0x00007f69d1458e7e in Akonadi::MonitorPrivate::emitNotification (this=0x7f69cc056010, msg=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:267
#23 0x00007f69d13d63c1 in Akonadi::ChangeRecorderPrivate::emitNotification (this=0x7f69cc056010, msg=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/changerecorder_p.h:60
#24 0x00007f69d1459b31 in Akonadi::MonitorPrivate::dataAvailable (this=0x7f69cc056010) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:281
#25 0x00007f69d1454f95 in Akonadi::Monitor::qt_metacall (this=0x7f69cc03af70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffa68d3200) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/monitor.moc:156
#26 0x00007f69d13d61f8 in Akonadi::ChangeRecorder::qt_metacall (this=0x7f69cc03af70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/changerecorder.moc:72
#27 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f69d13d9559 in Akonadi::EntityCache<Akonadi::Item, Akonadi::ItemFetchJob, Akonadi::ItemFetchScope>::fetchResult(KJob*) () from /usr/lib/libakonadi-kde.so.4
#29 0x00007f69d1406163 in Akonadi::EntityCacheBase::qt_metacall (this=0x7f69cc056098, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffa68d3390) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/entitycache_p.moc:77
#30 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#31 0x0000003997128d92 in KJob::result (this=<value optimized out>, _t1=0x4b810f0) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0_build/kdecore/kjob.moc:194
#32 0x0000003997128dd5 in KJob::emitResult (this=0x4b810f0) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0/kdecore/jobs/kjob.cpp:312
#33 0x00007f69d144a291 in Akonadi::Job::qt_metacall (this=0x4b810f0, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x4284e00) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/job.moc:91
#34 0x00007f69d1438f05 in Akonadi::ItemFetchJob::qt_metacall (this=0x4b810f0, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x4284e00) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/itemfetchjob.moc:73
#35 0x000000355956e60a in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#36 0x0000003559bb5254 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#37 0x0000003559bb9d2a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#38 0x0000003997832de2 in KApplication::notify (this=0x1e4d300, receiver=0x4b810f0, event=0x499cd40) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#39 0x000000355955a49b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#40 0x000000355955dc54 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#41 0x00000035595851a3 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/qt4/libQtCore.so.4
#42 0x0000003558c41a22 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#43 0x0000003558c42200 in g_main_context_iterate.clone.5 () from /usr/lib/libglib-2.0.so.0
#44 0x0000003558c4249d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#45 0x000000355958533f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#46 0x0000003559c59cbe in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#47 0x0000003559559862 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#48 0x0000003559559aa4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#49 0x000000355955df0b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#50 0x000000399be42913 in kdemain (argc=1, argv=0x7fffa68d41b8) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/desktop/shell/main.cpp:118
#51 0x0000003a6a41ecdd in __libc_start_main () from /lib/libc.so.6
#52 0x00000000004006f9 in _start ()

Possible duplicates by query: bug 263651, bug 261759.

Reported using DrKonqi
Comment 1 Aaron J. Seigo 2011-02-04 07:30:43 UTC
Git commit b5edbe651115f5e5cfa8fdc155eae8d19643cea3 by Aaron Seigo.
Committed on 04/02/11 at 07:27.
Pushed by aseigo into branch 'KDE/4.6'.

don't bother asserting

the methods that call with the assertion don't seem to actually rely
on it, and akonadi is regularly returning non-existent incidences.

BUG:265354

M  +1    -1    plasma/generic/dataengines/calendar/akonadi/calendar.cpp     

http://commits.kde.org/kde-workspace/b5edbe651115f5e5cfa8fdc155eae8d19643cea3
Comment 2 Aaron J. Seigo 2011-02-04 07:30:43 UTC
Git commit 5193d3928d1b46293c088d82b2236c1adbbe7579 by Aaron Seigo.
Committed on 04/02/11 at 07:27.
Pushed by aseigo into branch 'master'.

don't bother asserting

the methods that call with the assertion don't seem to actually rely
on it, and akonadi is regularly returning non-existent incidences.

BUG:265354

M  +1    -1    plasma/generic/dataengines/calendar/akonadi/calendar.cpp     

http://commits.kde.org/kde-workspace/5193d3928d1b46293c088d82b2236c1adbbe7579
Comment 3 boris64 2011-02-04 12:03:34 UTC
Thank you for your fast response.
I still get a crash which looks similiar
to me when i start kopete.
Is this also related to the calendar, is there something
else that needs a fix? Should i open a new bug report?

-----------

Application: Plasma-Desktop-Umgebung (plasma-desktop), signal: Aborted
[Current thread is 1 (Thread 0x7f942bb87780 (LWP 31530))]

Thread 3 (Thread 0x7f940e818700 (LWP 31614)):
#0  0x0000003a6a4c8cc3 in poll () from /lib/libc.so.6
#1  0x0000003558c41f64 in g_main_context_iterate.clone.5 () from /usr/lib/libglib-2.0.so.0
#2  0x0000003558c4249d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#3  0x0000003559585396 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#4  0x0000003559559862 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#5  0x0000003559559aa4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#6  0x000000355946fed4 in QThread::exec() () from /usr/lib64/qt4/libQtCore.so.4
#7  0x000000355953b628 in QInotifyFileSystemWatcherEngine::run() () from /usr/lib64/qt4/libQtCore.so.4
#8  0x000000355947269e in QThreadPrivate::start(void*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x0000003a6b006d4c in start_thread () from /lib/libpthread.so.0
#10 0x0000003a6a4d1a9d in clone () from /lib/libc.so.6

Thread 2 (Thread 0x7f9415f84700 (LWP 31616)):
#0  0x0000003a6b00b62c in pthread_cond_wait () from /lib/libpthread.so.0
#1  0x0000003561f91184 in QTWTF::TCMalloc_PageHeap::scavengerThread() () from /usr/lib64/qt4/libQtScript.so.4
#2  0x0000003561f911b9 in QTWTF::TCMalloc_PageHeap::runScavengerThread(void*) () from /usr/lib64/qt4/libQtScript.so.4
#3  0x0000003a6b006d4c in start_thread () from /lib/libpthread.so.0
#4  0x0000003a6a4d1a9d in clone () from /lib/libc.so.6

Thread 1 (Thread 0x7f942bb87780 (LWP 31530)):
[KCrash Handler]
#6  0x0000003a6a432735 in raise () from /lib/libc.so.6
#7  0x0000003a6a433bb6 in abort () from /lib/libc.so.6
#8  0x000000355946a664 in qt_message_output(QtMsgType, char const*) () from /usr/lib64/qt4/libQtCore.so.4
#9  0x000000355946a7fd in qt_message(QtMsgType, char const*, __va_list_tag*) () from /usr/lib64/qt4/libQtCore.so.4
#10 0x000000355946a995 in qFatal(char const*, ...) () from /usr/lib64/qt4/libQtCore.so.4
#11 0x00007f941455a4a8 in CalendarSupport::Calendar::Private::updateItem (this=0x7f9410041a70, item=..., mode=<value optimized out>) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/generic/dataengines/calendar/akonadi/calendar.cpp:196
#12 0x00007f941455b611 in CalendarSupport::Calendar::Private::dataChanged (this=0x7f9410041a70, topLeft=..., bottomRight=<value optimized out>) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/generic/dataengines/calendar/akonadi/calendar.cpp:157
#13 0x00007f9414545984 in CalendarSupport::Calendar::Private::qt_metacall (this=0x7f9410041a70, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff90a9a570) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0_build/plasma/generic/dataengines/calendar/moc_calendar_p.cpp:155
#14 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#15 0x00000035595b5e57 in QAbstractItemModel::dataChanged(QModelIndex const&, QModelIndex const&) () from /usr/lib64/qt4/libQtCore.so.4
#16 0x00007f94141c4ca0 in Akonadi::EntityTreeModelPrivate::dataChanged (this=<value optimized out>, top=..., bottom=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/entitytreemodel_p.cpp:1402
#17 0x00007f94141c9635 in Akonadi::EntityTreeModelPrivate::monitoredItemChanged (this=0x7f941008b660, item=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/entitytreemodel_p.cpp:940
#18 0x00007f94141be1be in Akonadi::EntityTreeModel::qt_metacall (this=0x7f941008a580, _c=QMetaObject::InvokeMetaMethod, _id=24, _a=0x7fff90a9a870) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/entitytreemodel.moc:156
#19 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#20 0x00007f9414206b27 in Akonadi::Monitor::itemChanged (this=<value optimized out>, _t1=<value optimized out>, _t2=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/monitor.moc:169
#21 0x00007f941420a9a2 in Akonadi::MonitorPrivate::emitItemNotification (this=0x7f9410042630, msg=..., item=..., collection=<value optimized out>, collectionDest=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:432
#22 0x00007f941420ae7e in Akonadi::MonitorPrivate::emitNotification (this=0x7f9410042630, msg=...) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:267
#23 0x00007f94141883c1 in Akonadi::ChangeRecorderPrivate::emitNotification (this=0x7f9410042630, msg=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/changerecorder_p.h:60
#24 0x00007f941420bb31 in Akonadi::MonitorPrivate::dataAvailable (this=0x7f9410042630) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0/akonadi/monitor_p.cpp:281
#25 0x00007f9414206f95 in Akonadi::Monitor::qt_metacall (this=0x7f941008bc40, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff90a9adc0) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/monitor.moc:156
#26 0x00007f94141881f8 in Akonadi::ChangeRecorder::qt_metacall (this=0x7f941008bc40, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=<value optimized out>) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/changerecorder.moc:72
#27 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#28 0x00007f941418b559 in Akonadi::EntityCache<Akonadi::Item, Akonadi::ItemFetchJob, Akonadi::ItemFetchScope>::fetchResult(KJob*) () from /usr/lib/libakonadi-kde.so.4
#29 0x00007f94141b8163 in Akonadi::EntityCacheBase::qt_metacall (this=0x7f94100426b8, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fff90a9af50) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/entitycache_p.moc:77
#30 0x000000355956eb07 in QMetaObject::activate(QObject*, QMetaObject const*, int, void**) () from /usr/lib64/qt4/libQtCore.so.4
#31 0x0000003997128d92 in KJob::result (this=<value optimized out>, _t1=0x2fc6920) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0_build/kdecore/kjob.moc:194
#32 0x0000003997128dd5 in KJob::emitResult (this=0x2fc6920) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0/kdecore/jobs/kjob.cpp:312
#33 0x00007f94141fc291 in Akonadi::Job::qt_metacall (this=0x2fc6920, _c=QMetaObject::InvokeMetaMethod, _id=6, _a=0x33c9f60) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/job.moc:91
#34 0x00007f94141eaf05 in Akonadi::ItemFetchJob::qt_metacall (this=0x2fc6920, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x33c9f60) at /tmp/portage/portage/kde-base/kdepimlibs-4.6.0/work/kdepimlibs-4.6.0_build/akonadi/itemfetchjob.moc:73
#35 0x000000355956e60a in QObject::event(QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#36 0x0000003559bb5254 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#37 0x0000003559bb9d2a in QApplication::notify(QObject*, QEvent*) () from /usr/lib64/qt4/libQtGui.so.4
#38 0x0000003997832de2 in KApplication::notify (this=0x11702f0, receiver=0x2fc6920, event=0x3691090) at /tmp/portage/portage/kde-base/kdelibs-4.6.0-r1/work/kdelibs-4.6.0/kdeui/kernel/kapplication.cpp:311
#39 0x000000355955a49b in QCoreApplication::notifyInternal(QObject*, QEvent*) () from /usr/lib64/qt4/libQtCore.so.4
#40 0x000000355955dc54 in QCoreApplicationPrivate::sendPostedEvents(QObject*, int, QThreadData*) () from /usr/lib64/qt4/libQtCore.so.4
#41 0x00000035595851a3 in postEventSourceDispatch(_GSource*, int (*)(void*), void*) () from /usr/lib64/qt4/libQtCore.so.4
#42 0x0000003558c41a22 in g_main_context_dispatch () from /usr/lib/libglib-2.0.so.0
#43 0x0000003558c42200 in g_main_context_iterate.clone.5 () from /usr/lib/libglib-2.0.so.0
#44 0x0000003558c4249d in g_main_context_iteration () from /usr/lib/libglib-2.0.so.0
#45 0x000000355958533f in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#46 0x0000003559c59cbe in QGuiEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtGui.so.4
#47 0x0000003559559862 in QEventLoop::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#48 0x0000003559559aa4 in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib64/qt4/libQtCore.so.4
#49 0x000000355955df0b in QCoreApplication::exec() () from /usr/lib64/qt4/libQtCore.so.4
#50 0x00007f942c076913 in kdemain (argc=1, argv=0x7fff90a9bd78) at /tmp/portage/portage/kde-base/plasma-workspace-4.6.0/work/plasma-workspace-4.6.0/plasma/desktop/shell/main.cpp:118
#51 0x0000003a6a41ecdd in __libc_start_main () from /lib/libc.so.6
#52 0x00000000004006f9 in _start ()
Comment 4 Aaron J. Seigo 2011-02-04 12:21:53 UTC
looks like the same thing; when 4.6.1 comes out, retest with that and let me know if you continue to have issues. cheers ...
Comment 5 boris64 2011-02-04 12:25:23 UTC
Hm, i already applied your patch to the plasma-workspace ebuild,
should this still happen even after recompiling/reinstalling?
Comment 6 Aaron J. Seigo 2011-02-04 18:13:24 UTC
the second backtrace doesn't actually match what is in the 4.6 branch; there were probably 3 different similar fixes to null incidence usage. either grab the 4.6 branch or wait for 4.6.1 to come out.