don't bother asserting

the methods that call with the assertion don't seem to actually rely
on it, and akonadi is regularly returning non-existent incidences.

BUG:265354