plasma/generic/dataengines/calendar/akonadi/calendar.cpp
@@ -190,7 +190,7 @@ void Calendar::Private::updateItem( const Akonadi::Item &item, UpdateMode mode )
            << "alreadyExisted=" << alreadyExisted
            << "; mode = " << mode
            << "; calendar = " << q;
-  Q_ASSERT( mode == DontCare || alreadyExisted == ( mode == AssertExists ) );
+  //Q_ASSERT( mode == DontCare || alreadyExisted == ( mode == AssertExists ) );
 
   const KCalCore::Incidence::Ptr incidence = CalendarSupport::incidence( item );
   if (!incidence) {
